--- a/videos.html
+++ b/videos.html
@@ -15,3 +15,9 @@
 </body>
 </html>
 <link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <title>My Video Page</title>
+    <link rel="stylesheet"
+href="style.css">    
+</head>
